--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="google-signin-client_id"
+          content="923662529312-a65mv2hr4q2knb597khf8urpqk5m6vls.apps.googleusercontent.com">
     <title>AdminPro</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,6 +16,8 @@
     <link href="./assets/css/style.css" rel="stylesheet">
     <!-- You can change the theme colors from here -->
     <link id="theme" rel="stylesheet">
+
+    <script src="https://apis.google.com/js/platform.js"></script>
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
@@ -49,7 +53,7 @@
     <script src="./assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
     <script src="./assets/plugins/sparkline/jquery.sparkline.min.js"></script>
     <!--Custom JavaScript -->
-    <script src="./assets/js/custom.min.js"></script>   
+    <script src="./assets/js/custom.min.js"></script>
     <!-- chartjs -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 </body>
