--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <!-- <meta http-equiv="Content-Security-Policy"
+          content="default-src 'none'; connect-src 'self';font-src 'self'; img-src 'self' data: https:; style-src 'self' ; script-src 'self'"> -->
     <meta charset="utf-8">
     <meta name="google-signin-client_id"
           content="923662529312-a65mv2hr4q2knb597khf8urpqk5m6vls.apps.googleusercontent.com">
